--- a/SmartX/src/app/app.component.html
+++ b/SmartX/src/app/app.component.html
@@ -1,31 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span style="text-align: center">Centro de control</span>
-    <span class="example-spacer"></span>
-    <!--Menu administracion    -->
-    <button mat-button [matMenuTriggerFor]="opciones"><mat-icon class="example-icon">view_headline</mat-icon></button>
-    <mat-menu #opciones >
-      <button mat-menu-item [matMenuTriggerFor]= "altas">Altas</button>
-      <button mat-menu-item [matMenuTriggerFor]= "bajas">Bajas</button>
-    </mat-menu>
-    <mat-menu #altas>
-      <button mat-menu-item (click)="addProduct()">Productos</button>
-      <button mat-menu-item (click)="addProvider()">Provedores</button>
-      <button mat-menu-item (click)="addCategory()">Categorias</button>
-    </mat-menu>
-    <mat-menu #bajas>
-      <button mat-menu-item (click)="delProduct()">Productos</button>
-      <button mat-menu-item (click)="delProvider()">Provedores</button>
-      <button mat-menu-item (click)="delCategory()">Categorias</button>
-    </mat-menu>
-    <!-- Menu user-->
-    <button mat-button [matMenuTriggerFor]="usermenu"><mat-icon class="example-icon">account_circle</mat-icon></button>
-    <mat-menu #usermenu>
-      <button mat-menu-item>Perfil</button>
-      <button mat-menu-item>Cerrar sesión</button>
-    </mat-menu>
-  </mat-toolbar-row>
-</mat-toolbar>
-<dashboard></dashboard>
+<router-outlet></router-outlet>
 
