Interfaz lista comienza consumos

--- a/SmartX/src/app/InsertComponents/product-dialog-i/product-dialog-i.component.html
+++ b/SmartX/src/app/InsertComponents/product-dialog-i/product-dialog-i.component.html
@@ -45,7 +45,7 @@
   </mat-form-field>
 
 </mat-dialog-content>
-<mat-dialog-actions>
+<mat-dialog-actions align="center">
    <span id="botones"><button mat-raised-button color="primary" (click)="send()"><mat-icon>add_shopping_cart</mat-icon>Agregar</button></span>
 </mat-dialog-actions>
 
