--- a/SmartX/src/app/dashboard/dashboard.component.html
+++ b/SmartX/src/app/dashboard/dashboard.component.html
@@ -63,7 +63,7 @@
             </mat-card-header>
             <mat-card-content class="dashboard-card-content">
               <div>
-                <graficas></graficas>
+                <canvas id="VentaM"></canvas>
               </div>
             </mat-card-content>
           </mat-card>
@@ -85,7 +85,7 @@
             </mat-card-header>
             <mat-card-content class="dashboard-card-content">
               <div>
-                <graficas></graficas>
+                <canvas id="VentaS"></canvas>
               </div>
             </mat-card-content>
           </mat-card>
