--- a/SmartX/src/app/update-product/update-product.component.html
+++ b/SmartX/src/app/update-product/update-product.component.html
@@ -14,13 +14,13 @@
               <mat-slider class="barra" [max]="60000" [min]="0" [step]="50" [thumbLabel]="false" [(ngModel)]="product.precioventa" >
               </mat-slider>
         </div>
-        <img src="{{product.imagen}}" alt="No se ha podido cargar la imagen" id="imagencompra"><br>
+        <img *ngIf="product.imagen!=''" src="{{product.imagen}}" alt="No se ha podido cargar la imagen" id="imagencompra"><br>
         <mat-form-field>
           <input matInput [(ngModel)]="product.imagen" placeholder="Imagen">
         </mat-form-field>
         <span id="dGenerales"><strong>categoria:</strong>{{product.categoria}}  <strong>Proveedor:</strong>{{product.proveedor}}</span>
   </mat-dialog-content>
- <mat-dialog-actions>
-   <span id="botones"><button mat-raised-button color="primary"><mat-icon>refresh</mat-icon>Actualizar</button><button mat-raised-button color="warn"><mat-icon>delete_forever
-</mat-icon>Eliminar</button></span>
+ <mat-dialog-actions align="center">
+   <button mat-raised-button color="primary"><mat-icon>refresh</mat-icon>Actualizar</button>
+   <button mat-raised-button color="warn"><mat-icon>delete_forever</mat-icon>Eliminar</button>
  </mat-dialog-actions>
