graficas para probar

--- a/SmartX/src/app/update-product/update-product.component.html
+++ b/SmartX/src/app/update-product/update-product.component.html
@@ -21,6 +21,6 @@
         <span id="dGenerales"><strong>categoria:</strong>{{product.categoria}}  <strong>Proveedor:</strong>{{product.proveedor}}</span>
   </mat-dialog-content>
  <mat-dialog-actions align="center">
-   <button mat-raised-button color="primary"><mat-icon>refresh</mat-icon>Actualizar</button>
-   <button mat-raised-button color="warn"><mat-icon>delete_forever</mat-icon>Eliminar</button>
+   <button mat-raised-button color="primary"(click)="actualizar()"><mat-icon>refresh</mat-icon>Actualizar</button>
+   <button mat-raised-button color="warn" (click)="borrar()"><mat-icon>delete_forever</mat-icon>Eliminar</button>
  </mat-dialog-actions>
