--- a/SmartX/src/app/dashboard/dashboard.component.html
+++ b/SmartX/src/app/dashboard/dashboard.component.html
@@ -21,6 +21,8 @@
     <button mat-button (click)="delCategory()"><mat-icon>toc</mat-icon>Categorias</button>
     <mat-divider></mat-divider>
     <button mat-button (click)="delProvider()"><mat-icon>local_shipping</mat-icon>Proveedores</button>
+    <mat-divider></mat-divider>
+    <button mat-button (click)="cupones()"><mat-icon>card_giftcard</mat-icon>Cupones</button>
   </mat-sidenav>
 <!--Tarjetas-->
   <mat-sidenav-content>
